--- a/asset/app.css
+++ b/asset/app.css
@@ -9,7 +9,7 @@
 body {
     margin: 0 70px;
     font-family: 'Poppins', sans-serif;
-    background-color: #E5E5E5;
+    background-color: #fff;
 }
 
 h1, h2, h3, h4, p, a {
@@ -19,7 +19,6 @@ h1, h2, h3, h4, p, a {
 
 header {
     width: 100%;
-    background-color: aqua;
     margin-top: 20px;
     margin-bottom: 30px;
 }
@@ -28,7 +27,6 @@ header .container {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    background-color: azure;
 }
 
 header .container .logo {
@@ -335,4 +333,68 @@ header .container .sign-up .masuk {
 
 .join .container .desc p {
     font-size: 14px;
+}
+
+footer {
+    background-color: #FAE3A4;
+    width: 100vw;
+    margin: 0 -70px;
+}
+
+footer .container {
+    margin: 0px 70px;
+    padding: 28px 0;
+    display: flex;
+    justify-content: space-between;
+    font-size: 14px;
+}
+
+footer .container .item-footer {
+    display: flex;
+}
+
+footer .container .item-footer .box {
+    display: flex;
+    flex-direction: column;
+    width: 175px;
+    margin-left: 20px;
+    line-height: 2;
+}
+
+footer .container .item-footer .box:last-child span {
+    font-size: 12px;
+    margin-bottom: 10px;
+}
+
+footer .container .item-footer .box:last-child input {
+    /* width: 100%; */
+    height: 30px;
+    border-radius: 5px;
+    border: none;
+    margin-bottom: 15px;
+}
+
+footer .container .item-footer .box:last-child .btn-subs {
+    width: 71%;
+}
+
+footer .container .item-footer .box:last-child .btn-subs a {
+    background-color: rgb(5, 106, 173);
+    display: block;
+    color: #fff;
+    padding: 5px 10px;
+    border: none;
+    border-radius: 8px;
+}
+
+.blockquote .container {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    margin-top: 10px;
+    font-size: 12px;
+}
+
+.blockquote .container img {
+    margin-left: 10px;
 }
